syntax = "proto3";

package dhareja.agroTraders;

message Product {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
}

message ProductList {
  repeated Product products = 1;
}

service AgroTradersService {
  rpc GetProduct(ProductRequest) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
}

message ProductRequest {
  string id = 1;
}

message Empty {}
